
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ u_long ;
struct hostent {scalar_t__ h_addr; } ;


 scalar_t__ INADDR_NONE ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 scalar_t__ inet_addr (char*) ;
 int printf (char*,char*) ;

u_long resolv(char *host) {
    struct hostent *hp;
    u_long host_ip;

    host_ip = inet_addr(host);
    if(host_ip == INADDR_NONE)
    {
        hp = gethostbyname(host);
        if(!hp)
        {
            printf("\nError: Unable to resolve hostname (%s)\n", host);
            exit(1);
        }
    else host_ip = *(u_long *)(hp->h_addr);
    }
    return(host_ip);
}
